--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   app:
     container_name: bookie-app
@@ -11,6 +9,7 @@ services:
       - '24678:24678'
     volumes:
       - ./:/app
+      - /app/node_modules
     environment:
       NODE_ENV: development
     depends_on:
